my first commit in this repository

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,57 @@
+/* ./src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  color: #fff;
+  background-color: lightseagreen;
+  font-family: "Montserrat", sans-serif;
+  /* height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center; */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.bg-black-alpha {
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.loading-animated {
+  position: relative;
+  width: 40px;
+  height: 40px;
+}
+
+.loading-animated::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0);
+  border: 5px solid white;
+  border-bottom: 5px solid rgba(0, 0, 0, 0);
+  border-radius: 9999px;
+  animation: animated-spin 0.5s linear infinite;
+}
+
+@keyframes animated-spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.container-scrollbar::-webkit-scrollbar {
+  width: 5px;
+  background: transparent;
+}
+.container-scrollbar::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.7);
+  border-radius: 50px;
 }
